--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -9,3 +9,12 @@ ja:
       previous: "&lsaquo; 前"
       next: "次 &rsaquo;"
       truncate: "..."
+  activerecord:
+    attributes:
+      blog:
+        title: タイトル
+        content: 内容
+      user:
+        name: 氏名
+        email: メールアドレス
+        password: パスワード
